--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.thymeleaf.prefix=classpath:templates/
 #jdbc
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #characterEncoding=uth8
-spring.datasource.url=jdbc:mysql://39.106.184.48:3306/liveness?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.password=cxl123456
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://XXXXX:3306/liveness?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.password=
+spring.datasource.username=
 
 #mapper
 mybatis.type-aliases-package=com.easyArch.entity
