--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=63391
+netty.server.port=9000
 #spring.resources.static-locations=classpath:templates/pulic/html
 spring.thymeleaf.cache=false
 #spring.thymeleaf.check-template=false
