--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=63391
+server.port=63392
 netty.server.port=9000
 #spring.resources.static-locations=classpath:templates/pulic/html
 spring.thymeleaf.cache=false
@@ -12,7 +12,7 @@ spring.thymeleaf.prefix=classpath:templates/
 #jdbc
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #characterEncoding=uth8
-spring.datasource.url=jdbc:mysql://localhost:3306/liveness?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://121.199.21.197/liveness?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.password=123456
 spring.datasource.username=root
 
