--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=63393
-netty.server.port=9000
+server.port=63394
+netty.server.port=9002
+#netty.server.port=9000//硬件正在运行此端口
 #spring.resources.static-locations=classpath:templates/pulic/html
 spring.thymeleaf.cache=false
 #spring.thymeleaf.check-template=false
@@ -8,6 +9,19 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:templates/
+
+#server:
+#  port: 0 #随机端口
+#  context-path: /
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: false
+#    serviceUrl:
+#      defaultZone: http://www.xxx.com:7070/eureka/
+#  instance:
+#    instance-id: memberService:${random.int[10000,19999]}
+
 
 #jdbc
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
